AMBARI-24692. Revert jvm gc settings